[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/NextLevelManager.gd" type="Script" id=1]
[ext_resource path="res://Images/ChangeLevel/finishPole.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="NextLevel" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_NextLevel_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
